@@ -37,13 +37,13 @@ $config['markasjunk2_ham_flag'] = null;
 // Write output from spam/ham commands to the log for debug
 $config['markasjunk2_debug'] = false;
 
-// Show icon on mailbox toolbar
+// Show icon on toolbar
 // The mark as spam/ham icon can either be displayed on the toolbar or as part of the mark messages menu
-$config['markasjunk2_mb_toolbar'] = true;
-
-// Show icon on compose toolbar
-// The mark as spam/ham icon can either be displayed on the toolbar or as part of the mark messages menu
-$config['markasjunk2_cp_toolbar'] = true;
+// 0 - always show in mark message menu
+// 1 - always show on toolbar
+// 2 - show in toolbar on mailbox screen, show in mark message menu message on screen
+// 3 - show in mark message menu on mailbox screen, show in toolbar message on screen
+$config['markasjunk2_toolbar'] = 1;
 
 // Learn any message moved to the spam mailbox as spam (not just when the button is pressed)
 $config['markasjunk2_move_spam'] = false;
